k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
    name: client-deployment 
spec:
    replicas: 1
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web 
        spec:
            containers:
                - name: client
                  image: msanogo/multi-client
                  ports:
                    - containerPort: 3000
                  resources:
                    requests:
                      memory: "64Mi"
                      cpu: "250m"
                    limits:
                      memory: "128Mi"
                      cpu: "500m"
